added a ton of css

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,4 +1,4 @@
-r<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -14,8 +14,8 @@ r<!DOCTYPE html>
 <body>
 
     <div class="container mx-auto">
-        <nav class="navbar navbar-expand-lg text-white navbar-dark bg-dark">
-            <a class="navbar-brand" href="/login">Ninja</a>
+        <nav class="navbar navbar-expand-lg text-white navbar-dark">
+            <a class="navbar-brand" href="/login">Trade Ninja</a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item ">
@@ -30,28 +30,22 @@ r<!DOCTYPE html>
                 </ul>
             </div>
         </nav>
+            <h1 class="my-5 mx-auto text-center h1">About Us</h1>
+            
+            <div class="container">
+                <p class="">Trade Ninja ('TN') is free online trading simulator crafted to help anyone ride the
+                    rollercoaster experience the of the
+                    financial markerts! Real time quotes provided by Alpha Vantage. Commission free trading! Easy to use UI. See
+                    your portfolio rise or fall. Compete with other Users in the ninja community to see who is the best!</p>
+                <div id="alert-space">
+            
+                </div>
+            </div>
+
     </div>
 
 
 
-    <h1 class="my-5 mx-auto text-center h1">About Us</h1>
-
-    <div class="container">
-        <p class="text-center h5">Trade Ninja ('TN') is free online trading simulator crafted to help anyone ride the rollercoaster experience the of the financial markerts!</p>
-        <ul class="text-center h1 my-4"> Features
-            <li class="h5 text-left my-4">Real time quotes provided by Alpha Vantage.</li>
-            <li class="h5 text-left my-4">Commission free trading!</li>
-            <li class="h5 text-left my-4">Easy to use UI</li>
-            <li class="h5 text-left my-4">See your portfolio rise or fall</li>
-            <li class="h5 text-left my-4">Compete with other Users in the ninja community to see who is the best! </li>
-
-
-
-        </ul>
-        <div id="alert-space">
-
-        </div>
-    </div>
 
 
 
