--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,9 +7,82 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
         crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Stylish&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Catamaran|Heebo|Oswald&display=swap" rel="stylesheet">
     <title>{{title}}</title>
 </head>
+
+<style>
+    body {
+        background-color: black !important;
+        color: white !important;
+        font-family: 'Heebo', sans-serif !important;
+    }
+
+    .navbar {
+        background-color: black ! !important;
+    }
+
+    .navbar-brand {
+        color: red !important;
+        font-style: italic
+    }
+
+    .btn-dark {
+        background-color: green !important;
+    }
+
+    #submit,
+    #ninja-cash {
+        background-color: darkred !important;
+        border-color: darkred !important;
+    }
+
+    #order {
+        background-color: darkred !important;
+        border-color: darkred !important;
+    }
+
+    #submit:hover {
+        border: thick solid white !important;
+    }
+
+    #ninja-cash:hover {
+        border: thick solid white !important;
+    }
+
+    #order:hover {
+        border: thick solid white !important;
+    }
+
+    .dash-button:hover {
+        border: thick solid white !important
+    }
+
+    #logout, .btn-transparent {
+        border: thick solid gray !important;
+        color: gray !important;
+    }
+
+    #logout:hover {
+        border: thick solid white !important;
+        color: white !important;
+
+    }
+
+    .btn-transparent:hover {
+        border: thick solid white !important;
+        color: white !important;
+
+    }
+
+    thead {
+        background-color:rgb(46, 127, 247) !important;
+        color: white !important;
+        border: solid thick white !important;
+    }
+
+
+</style>
 
 <body style="font-family: 'Stylish', sans-serif;">
     {{{body}}}
