--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,8 +14,8 @@
 <body>
 
     <div class="container mx-auto">
-        <nav class="navbar navbar-expand-lg text-white navbar-dark bg-dark">
-            <a class="navbar-brand" href="/login">Ninja</a>
+        <nav class="navbar navbar-expand-lg text-white navbar-dark">
+            <a class="navbar-brand" href="/login">Trade Ninja</a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item ">
@@ -36,7 +36,7 @@
 
     <h1 class="my-5 mx-auto text-center">Login to begin</h1>
 
-    <div class="container">
+    <div class="container col-4">
         <form id="login">
             <div class="form-group">
                 <label for='username'>Username</label>
@@ -49,7 +49,7 @@
             <button style="width: 100%" id='submit' type="submit" class="btn btn-primary my-4">Ninja Log</button>
         </form>
 
-        <div id="alert-space">
+        <div id="alert-space" class="text-center my-3">
 
         </div>
     </div>
@@ -97,16 +97,17 @@
                 }
 
                 if (results === "Invalid credentials!") {
-                     $("#alert-space").html(`<div class="alert alert-danger" role="alert">${results}</div>`);
+                    $("#alert-space").html(`<div class="alert alert-danger" role="alert">${results}</div>`);
                     setTimeout(() => {
                         $("#alert-space").empty();
                     }, 3000);
                 }
 
-                if (results === "Login Successful!")  {
-                       $("#alert-space").html(`<div class="alert alert-success" role="alert">${results}</div>`);
+                if (results === "Login Successful!") {
+                  
+                    $("#alert-space").html(`<div class="spinner-border text-danger" role="status"><span class="sr-only"></span></div>`)
                     setTimeout(() => {
-                       window.location = "/dashboard"
+                        window.location = "/dashboard"
                     }, 3000);
                 }
 
