--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -10,30 +10,22 @@
 
 <body>
     <div class="container mx-auto">
-        <div class="row my-3">
-                <div class="container col-12">
-                    <a class='float-left' href="/dashboard">
-                        <div class="btn btn-lg btn-primary">Back</div>
-                    </a>
-                    <a class='float-right' href="/trade">
-                        <div class="btn btn-lg btn-primary">Trade</div>
-                    </a>
-                </div>
-        </div>
+        <a href="/dashboard"><button style='width: 150px; height:20%' class="btn mx-2 my-1 btn-transparent text-center dash-button">Dashboard</button></a>
+
    
         <h1 class="text-center my-3">Holdings</h1>
 
         <table class="table">
-            <thead class="thead-dark">
+            <thead class="thead-primary">
                 <tr>
-                    <th scope="col">Ticker</th>
-                    <th scope="col">Desc</th>
-                    <th scope="col">Price Acquired</th>
-                    <th scope="col">Market Price</th>
-                    <th scope="col">Delta</th>
-                    <th scope="col">Quantity</th>
-                    <th scope="col">Date</th>
-                    <th scope="col">iD</th>
+                    <th scope="col" class="p-2 text-center">Ticker</th>
+                    <th scope="col" class="p-2 text-center">Desc</th>
+                    <th scope="col" class="p-2 text-center">Price Acquired</th>
+                    <th scope="col" class="p-2 text-center">Market Price</th>
+                    <th scope="col" class="p-2 text-center">Delta</th>
+                    <th scope="col" class="p-2 text-center">Quantity</th>
+                    <th scope="col" class="p-2 text-center">Date</th>
+                    <th scope="col" class="p-2 text-center">iD</th>
                 </tr>
             </thead>
             <tbody>
