--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -14,8 +14,8 @@
 <body>
 
     <div class="container mx-auto">
-        <nav class="navbar navbar-expand-lg text-white navbar-dark bg-dark">
-            <a class="navbar-brand" href="/login">Ninja</a>
+        <nav class="navbar navbar-expand-lg text-white navbar-dark">
+            <a class="navbar-brand" href="/login">Trade Ninja</a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item ">
