added a leadersboard page need to fix Holdings and finish trade for Sells and History

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -14,11 +14,14 @@
 <body>
 
     <div class="container mx-auto">
-
+        <div class="row ml-auto">
+            <a class="navbar-brand" href="/login">Trade Ninja</a>
+        </div>
+       
 
         <h1 class='my-5 text-center' id='welcome'> Welcome Ninja {{firstName}}</h1>
 
-        <p class="text-center my-5">Let's get ready to begin your journey as a Ninja Trader! Choose your path:</p>
+        <p class="text-center my-5 h4">Choose your path:</p>
 
 
         <div class=" text-center my-3">
