--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Catamaran|Heebo|Oswald&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Fruktur|Righteous&display=swap" rel="stylesheet">
     <title>{{title}}</title>
 </head>
 
@@ -24,7 +25,8 @@
 
     .navbar-brand {
         color: red !important;
-        font-style: italic
+        font-family: 'Righteous', cursive;
+        font-size: 28px !important;
     }
 
     .btn-dark {
@@ -81,6 +83,10 @@
         border: solid thick white !important;
     }
 
+    tbody {
+       
+        color: white 
+    }
 
 </style>
 
