--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -23,13 +23,26 @@
                     <th scope="col" class="p-2 text-center">Price Acquired</th>
                     <th scope="col" class="p-2 text-center">Market Price</th>
                     <th scope="col" class="p-2 text-center">Delta</th>
-                    <th scope="col" class="p-2 text-center">Quantity</th>
+                    <th scope="col" class="p-2 text-center">Quantity</th> 
+                    <th scope="col" class="p-2 text-center">Total</th>
                     <th scope="col" class="p-2 text-center">Date</th>
                     <th scope="col" class="p-2 text-center">iD</th>
                 </tr>
             </thead>
             <tbody>
-                {{holdings}}
+                {{#each holdings}}
+                    <tr>
+                        <td>{{this.ticker}}</td>
+                        <td>{{this.description}}</td>
+                        <td>{{this.price}}</td>
+                        <td>Work in progress</td>
+                        <td>Work in progress</td>
+                        <td>{{this.quantity}}</td>
+                        <td>{{this.total}}</td>
+                        <td>{{this.trade_date}}</td>
+                        <td>{{this.id}}</td>
+                    </tr>
+                {{/each}}
             </tbody>
         </table>
     </div>
