updated port bal for holdings, holdings shows only holdings and not trades, need to update sellon trade.hbs

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -19,7 +19,7 @@
         </div>
        
 
-        <h1 class='my-5 text-center' id='welcome'> Welcome Ninja {{firstName}}</h1>
+        <h1 class='my-5 text-center' id='welcome'> Kon'nichiwa Ninja {{firstName}}!</h1>
 
         <p class="text-center my-5 h4">Choose your path:</p>
 
