--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -83,6 +83,16 @@
         border: solid thick white !important;
     }
 
+    #history-head {
+        background-color:rgb(110,117, 124) !important;
+        color: white !important;
+        border: solid thick white !important;
+    }
+
+    #leaders {
+        background-color: rgb(204, 68, 75) !important;
+    }
+
     tbody {
        
         color: white 
