--- a/views/leaders.handlebars
+++ b/views/leaders.handlebars
@@ -14,7 +14,7 @@
         <h1 class="h3 my-5">{{userName}} vs all Ninjas!</h1>
 
         <table class="table">
-            <thead class="thead-primary">
+            <thead id='leaders'class="thead-primary">
                 <tr>
                     <th scope="col">User</th>
                     <th scope="col">Member Since</th>
