--- a/views/trade.handlebars
+++ b/views/trade.handlebars
@@ -15,7 +15,7 @@
 
         <div class="container my-5 " id='welcome'>
             <h1 class="text-center"> Place an order</h1>
-            <div class='text-right h6 text-success' id='balance'>Cash Available: {{balance}}</div>
+            <div class='text-right h5 text-success' id='balance'>Cash Available: {{balance}}</div>
             <form id='trade-form' class='my-3'>
                 <div class="form-group">
                     <label for="formGroupExampleInput">Ticker</label>
@@ -84,10 +84,19 @@
     let userPrice = parseFloat($("#price").val());
     let stockName = '';
 
+    $(document).ready(() => {
+         $.get("http://localhost:3000/cash/users", (data, status) => {
+
+            data.forEach(trans => accountBal += trans.amount);
+            console.log(accountBal);
+        })
+
+    })
+
+    
 
     $(document).on("click", "#order", (event) => {
         event.preventDefault();
-
 
         let ticker = $("#ticker").val()
         let desc = $("#stock-name").val();
@@ -96,18 +105,15 @@
         let quantity = $("#quantity").val()
         let total = parseFloat(price) * parseInt(quantity);
 
-
-        $.get("http://localhost:3000/cash/users", (data, status) => {
-
-            data.forEach(trans => accountBal += trans.amount);
-
-        });
+        console.log(accountBal)
+       
 
 
         if (orderType === "Buy" && accountBal < total) {
 
             $("#alert-space").append(`<div class="alert alert-transparent text-danger" role="alert">You do not have enough funds!</div>`);
 
+            $("#trade-form")[0].reset();
             setTimeout(() => {
                 $("#alert-space").empty()
 
@@ -119,7 +125,7 @@
 
 
             let order = {
-                ticker: ticker,
+                ticker: ticker.toUpperCase(),
                 desc: stockName,
                 transType: orderType,
                 price: price,
@@ -140,6 +146,17 @@
                 data: JSON.stringify(order)
             }).then(results => {
                 console.log(results);
+            });
+
+
+            $.ajax({
+                type: "POST",
+                contentType: "application/json",
+                url: "http://localhost:3000/holdings",
+                data: JSON.stringify(order)
+            }).then(results => {
+                console.log(results);
+                
             })
 
             $.ajax({
@@ -148,21 +165,18 @@
                 url: "http://localhost:3000/trades/cash",
                 data: JSON.stringify(cash)
             }).then(results => {
-                console.log(results);
+                 $("#trade-form")[0].reset();
+
+                $("#alert-space").append(`<div class="alert alert-transparent text-success" role="alert">Your holdings were updated sucessfully!</div>`);
+
+                setTimeout(() => {
+                    $("#alert-space").fadeOut(3);
+                    window.location = "dashboard"
+                }, 3000)
+
             })
 
-
-
-
-            $("#trade-form")[0].reset();
-
-            $("#alert-space").append(`<div class="alert alert-transparent text-success" role="alert">Your order was place successfully!</div>`);
-
-            setTimeout(() => {
-                $("#alert-space").fadeOut(3);
-                window.location.replace("/dashboard");
-            }, 3000)
-
+           
 
         }
 
@@ -170,7 +184,7 @@
         if (orderType === "Sell") {
 
             let order = {
-                ticker: ticker,
+                ticker: ticker.toUpperCase(),
                 desc: stockName,
                 transType: orderType,
                 price: price,
@@ -179,9 +193,15 @@
             }
 
 
-        
-        
-        
+            $.ajax({
+                type: "DELETE",
+                contentType: "application/json",
+                url: "http://localhost:3000/sell",
+                data: JSON.stringify(order)
+            }).then(results => {
+                console.log(results);
+            })
+            
 
                 $("#trade-form")[0].reset();
 
